--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,25 +58,29 @@ google_analytics:
 cameras:
   1:
     #input_video: "rtsp://admin:Panto2025@192.168.0.109:554/cam/realmonitor?channel=1&subtype=0"
-    input_video: "camera_1_video.mp4"
+    input_video: "video/video_cam3_0422.mp4"  
     output_video: "camera_1_processed.mp4"
     camera_sn: "DS-7104NI-Q1-1"
     save_data: "data/camera_1"
     polygons:
-      - [1, [[20, 691], [18, 779], [414, 881], [709, 759],[1675, 1060], [1902, 890], [1902, 667], [704, 416]]] # Zona de mesas externas 1
+      - [3, [[1862,767],[1443,633],[794,1077],[123,1072],[3,711],[4,517],[1122,256],[1893,450],[1860,534],[1873,611],[1855,689]]]
+    input_homography: [[1889,454], [1122,256], [120,1070], [1441,631], [1893,780]]
+    output_homography: [[837,72], [324,73], [339,692], [575,363], [758,390]]
   2:
     #input_video: "rtsp://admin:Panto2025@192.168.0.109:554/cam/realmonitor?channel=2&subtype=0"
-    input_video: "camera_2_video.mp4"
+    input_video: "camera_1_video.mp4"
     output_video: "camera_2_processed.mp4"
     camera_sn: "DS-7104NI-Q1-2"
     save_data: "data/camera_2"
     polygons:
-      - [2, [[1740,533],[1788,1075],[741,1074],[433,591],[400,480],[536,442],[1008,365],[1061,398],[1128,389],[1214,431],[1369,397]]]
+      - [2, [[1740,533],[1788,1075],[741,1074],[433,591],[400,480],[536,442],[1008,365],[1061,398],[1128,389],[1214,431],[1369,397]]]  
+
   3:
     #input_video: "rtsp://admin:Panto2025@192.168.0.109:554/cam/realmonitor?channel=3&subtype=1"
-    input_video: "video/video_cam3_0422.mp4" 
-    output_video: "video/output/video_cam3_0422_processed.mp4"
+    input_video: "video2.mp4"
+    output_video: "camera_3_processed.mp4"
     camera_sn: "DS-7104NI-Q1-3"
     save_data: "data/camera_3"
     polygons:
-      - [3, [[1862,767],[1443,633],[794,1077],[123,1072],[3,711],[4,517],[1122,256],[1893,450],[1860,534],[1873,611],[1855,689]]]
+      - [1, [[20, 691], [18, 779], [414, 881], [709, 759],[1675, 1060], [1902, 890], [1902, 667], [704, 416]]] # Zona de mesas externas 3
+      
