--- a/docker/requirements_container.txt
+++ b/docker/requirements_container.txt
@@ -1,76 +1,22 @@
-# pillow ya instalado antes
-# pyyaml ya instalado antes
-# requests ya instalado antes
-# scipy ya instalado antes
+# Utilidades generales
 tqdm>=4.64.0
 psutil
 py-cpuinfo
-thop>=0.1.1
-# pandas ya instalado antes
-seaborn>=0.11.0
 
-flatbuffers>=23.5.26,<100; platform_machine == 'aarch64'
-h5py!=3.11.0; platform_machine == 'aarch64'
-
-# export
-onnxsim>=0.4.33
-
-# yolov8 track
-lapx>=0.5.2
-
-# paddleocr
+# Computer Vision y procesamiento de imágenes
 shapely
 scikit-image
-#imgaug
 pyclipper
-lmdb
-tqdm
-# numpy ya instalado antes
-rapidfuzz
-#opencv-python<=4.6.0.66
-#opencv-contrib-python<=4.6.0.66
-cython
-# Pillow ya instalado antes
-# pyyaml ya instalado antes
-
-# benchmark yolov8
-portalocker #ncnn
-
-
-# face id
-# requests ya instalado antes
-# numpy ya instalado antes
-# pandas ya instalado antes
-gdown>=3.10.1
-tqdm>=4.30.0
-# Pillow ya instalado antes
-#opencv-python>=4.5.5.64
-#tensorflow>=1.9.0
-#keras>=2.2.0
-Flask>=1.1.2
-#mtcnn>=0.1.0
-#retina-face>=0.0.1
-fire>=0.4.0
-gunicorn>=20.1.0
-
-# retinaface
-# numpy ya instalado antes
-gdown>=3.10.1
-# Pillow ya instalado antes
-#opencv-python>=3.4.4
-#tensorflow>=1.9.0
-
-# mtcnn
-#keras>=2.0.0
-#opencv-python>=4.1.0
-
-# gpio
-Jetson.GPIO
-
-# similarity
 imagehash
 
-# API webserver process
+# Tracking
+lapx>=0.5.2
+
+# Face recognition
+gdown>=3.10.1
+fire>=0.4.0
+
+# API webserver
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.5
@@ -78,3 +24,13 @@ jinja2==3.1.2
 aiofiles==23.2.1
 websockets==11.0.3
 markupsafe==2.0.1
+
+# GPIO para Jetson
+Jetson.GPIO
+
+# Procesamiento de datos
+seaborn>=0.11.0
+rapidfuzz
+
+# Herramientas de desarrollo
+portalocker
