--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,8 +56,7 @@ RUN if [ -f /usr/lib/python3.10/dist-packages/tensorrt/__init__.py ]; then \
     fi
 
 # Dependencias del proyecto
-RUN pip3 install imutils --no-deps \
-    && pip3 install logging-reset \
+RUN pip3 install logging-reset \
     && pip3 install supervision==0.18.0 --no-deps
 
 # torch2trt (compatible JetPack 6) - instalación temporal
