--- a/systemd/alma-script.service
+++ b/systemd/alma-script.service
@@ -7,7 +7,7 @@ After=docker.service
 User=jorinnx
 Type=simple
 ExecStartPre=/bin/bash -c 'while ! docker ps | grep alma_container; do sleep 1; done'
-ExecStart=/usr/bin/docker exec alma_container /bin/bash -c "cd /workspace/iakol_minera_falcon_alma_peru && python3 process_video.py"
+ExecStart=/usr/bin/docker exec alma_container /bin/bash -c "cd /app/alma && python3 process_video.py"
 ExecStop=/usr/bin/docker exec alma_container /bin/bash -c "pkill -f 'python3 process_video.py'" || true
 TimeoutStopSec=10
 Restart=always
