--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,13 +53,13 @@ google_analytics:
 cameras:
   1:
     # input_video: "video/video_camara1_0_4__22.mp4"
-    input_video: "rtsp://admin:Facil.12@192.168.1.2:554/Streaming/Channels/101"
+    input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
     output_video: "video/camera_1_processed.mp4"
-    camera_sn: "DS-7104NI-Q1-1"
-    save_video: false 
+    camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517210"
+    save_video: true 
     save_data: "data/camera_1"
     polygons:
-      - [3, [[1862,767],[1443,633],[794,1077],[123,1072],[3,711],[4,517],[1122,256],[1893,450],[1860,534],[1873,611],[1855,689]]]
+      - [1,[[70,695],[204,1066],[561,1069],[1493,501],[1918,672],[1918,323],[1249,62],[12,300]]]
     input_homography: [[1889,454], [1122,256], [120,1070], [1441,631], [1893,780]]
     output_homography: [[837,72], [324,73], [339,692], [575,363], [758,390]]
     
@@ -67,22 +67,22 @@ cameras:
     # input_video: "video/video_camara2_0_51.mp4"
     input_video: "rtsp://admin:Facil.12@192.168.1.64:554/Streaming/Channels/101"
     output_video: "video/camera_2_processed.mp4"
-    save_video: false 
-    camera_sn: "DS-7104NI-Q1-2"
+    save_video: true 
+    camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517210"
     save_data: "data/camera_2"
     polygons:
-      - [2, [[1740,533],[1788,1075],[741,1074],[433,591],[400,480],[536,442],[1008,365],[1061,398],[1128,389],[1214,431],[1369,397]]]  
+      - [2,[[795,1074],[1452,1067],[1518,273],[1494,168],[1016,56],[856,100],[711,46],[148,261],[168,339],[253,469],[511,783]]]  
     input_homography: [[1788, 1070],[1740, 534],[1203, 330],[390, 471],[735, 1070]]
     output_homography: [[171, 437],[351, 674],[808, 648],[851, 202],[295, 90]]
 
   3:
     # input_video: "video/video_camara3_0_100.mp4"
-    input_video: "rtsp://admin:Facil.12@192.168.1.47:554/Streaming/Channels/101"
+    input_video: "rtsp://admin:Facil.12@192.168.1.2:554/Streaming/Channels/101"
     output_video: "video/camera_3_processed.mp4"
-    save_video: false 
-    camera_sn: "DS-7104NI-Q1-3"
+    save_video: true 
+    camera_sn: "DS-2SE3C204MWG-E/1220240710AAWRFH2517216"
     save_data: "data/camera_3"
     polygons:
-      - [1, [[20, 691], [18, 779], [414, 881], [709, 759],[1675, 1060], [1902, 890], [1902, 667], [704, 416]]]
+      - [3, [[1916,773],[1749,933],[1649,941],[878,742],[684,750],[570,792],[143,680],[897,426],[1421,495],[1918,625]]]
     input_homography: [[710,760], [1669,1053], [1902,883], [1900,669], [700,414], [18,690], [18,776], [441,880]]
     output_homography: [[344,187], [11,303], [149,676], [433,763], [1011,568], [487,12], [394,5], [277,77]]
