--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,87 +1,48 @@
-site_name: torch2trt
-theme:
-    name: "material"
-    palette:
-        primary: green
-        secondary: light green
-
-repo_url: https://github.com/NVIDIA-AI-IOT/torch2trt
-
-plugins:
-  - search
-  
-use_directory_urls: False
-
-edit_uri: blob/master/docs
-markdown_extensions:
-  - pymdownx.tabbed
-  - pymdownx.keys
-  - pymdownx.snippets
-  - pymdownx.inlinehilite
-  - pymdownx.highlight:
-      use_pygments: true
-  - admonition
-  - pymdownx.details
-  - pymdownx.superfences
-  - attr_list
-  
-nav:
-  - Home: index.md
-  - Getting Started: getting_started.md
-  - Usage:
-      - Basic Usage: usage/basic_usage.md
-      - Reduced Precision: usage/reduced_precision.md
-      - Custom Converter: usage/custom_converter.md
-  - Converters: converters.md
-  - Benchmarks: 
-      - Jetson Nano: benchmarks/jetson_nano.md
-      - Jetson Xavier: benchmarks/jetson_xavier.md
-  - Contributing: CONTRIBUTING.md
-  - See Also: see_also.md
-
-extra_css:
-    - css/version-select.css
-extra_javascript:
-    - js/version-select.js
-    
-google_analytics:
-    - UA-135919510-3
-    - auto
-    
- 
 # Configuración de cámaras
 cameras:
   1:
+    use_rtsp: true  # true = stream RTSP, false = archivo MP4
     # input_video: "video/video_camara1_0_4__22.mp4"
     input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
     output_video: "video/camera_1_processed.mp4"
     camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517200"
-    save_video: false 
+    save_video: false  # true = guarda video procesado, false = solo procesa
     save_data: "data/camera_1"
+    # Para videos MP4 (solo si use_rtsp=false)
+    start_video: 0
+    end_video: 30
+    # Para streams RTSP (solo si use_rtsp=true y save_video=true)
+    time_save_rtsp: 60  # segundos de grabación
     polygons:
       - [1,[[70,695],[204,1066],[561,1069],[1493,501],[1918,672],[1918,323],[1249,62],[12,300]]]
     input_homography: [[1889,454], [1122,256], [120,1070], [1441,631], [1893,780]]
     output_homography: [[837,72], [324,73], [339,692], [575,363], [758,390]]
     
   2:
-    # input_video: "video/video_camara2_0_51.mp4"
+    use_rtsp: true
     input_video: "rtsp://admin:Facil.12@192.168.1.64:554/Streaming/Channels/101"
     output_video: "video/camera_2_processed.mp4"
     save_video: false 
     camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517210"
     save_data: "data/camera_2"
+    start_video: 0
+    end_video: 30
+    time_save_rtsp: 60
     polygons:
       - [2,[[795,1074],[1452,1067],[1518,273],[1494,168],[1016,56],[856,100],[711,46],[148,261],[168,339],[253,469],[511,783]]]  
     input_homography: [[1788, 1070],[1740, 534],[1203, 330],[390, 471],[735, 1070]]
     output_homography: [[171, 437],[351, 674],[808, 648],[851, 202],[295, 90]]
 
   3:
-    # input_video: "video/video_camara3_0_100.mp4"
+    use_rtsp: true
     input_video: "rtsp://admin:Facil.12@192.168.1.2:554/Streaming/Channels/101"
     output_video: "video/camera_3_processed.mp4"
     save_video: false 
     camera_sn: "DS-2SE3C204MWG-E/1220240710AAWRFH2517216"
     save_data: "data/camera_3"
+    start_video: 0
+    end_video: 30
+    time_save_rtsp: 60
     polygons:
       - [3, [[1916,773],[1749,933],[1649,941],[878,742],[684,750],[570,792],[143,680],[897,426],[1421,495],[1918,625]]]
     input_homography: [[710,760], [1669,1053], [1902,883], [1900,669], [700,414], [18,690], [18,776], [441,880]]
