--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,13 +6,13 @@ cameras:
     input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
     output_video: "video/camera_1_processed.mp4"
     camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517200"
-    save_video: false  # true = guarda video procesado, false = solo procesa
+    save_video: true  # true = guarda video procesado, false = solo procesa
     save_data: "data/camera_1"
     # Para videos MP4 (solo si use_rtsp=false)
     start_video: 0
     end_video: 30
     # Para streams RTSP (solo si use_rtsp=true y save_video=true)
-    time_save_rtsp: 60  # segundos de grabación
+    time_save_rtsp: 20  # segundos de grabación
     polygons:
       - [1,[[70,695],[204,1066],[561,1069],[1493,501],[1918,672],[1918,323],[1249,62],[12,300]]]
     input_homography: [[1889,454], [1122,256], [120,1070], [1441,631], [1893,780]]
