--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,9 @@
+# Configuración global del sistema de procesamiento
+processing:
+  segmentation_interval_idle: 100      # frames entre segmentaciones en reposo (zona vacía)
+  segmentation_interval_active: 10     # frames entre segmentaciones con actividad
+  activity_cooldown_frames: 200        # frames sin actividad para volver a reposo
+
 # Configuración de cámaras
 cameras:
   1:
