--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ processing:
   segmentation_interval_idle: 100      # frames entre segmentaciones en reposo (zona vacía)
   segmentation_interval_active: 10     # frames entre segmentaciones con actividad
   activity_cooldown_frames: 200        # frames sin actividad para volver a reposo
+  detection_skip_idle: 3               # NUEVO: cada cuántos frames detectar en SLEEP (3 = cada 3 frames)
 
 # Configuración de cámaras
 cameras:
