feat: Introduce core video processing, monitoring, alerting, and threading systems with configuration, homography, and deployment utilities.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,6 +53,9 @@ RUN pip3 install --no-cache-dir --index-url https://pypi.org/simple --default-ti
 # Instalar ultralytics SIN opencv (ya viene en la imagen base)
 RUN pip3 install --no-cache-dir --index-url https://pypi.org/simple ultralytics==8.3.63 --no-deps
 
+# Instalar onnxslim para exportación TensorRT (forzar PyPI oficial para evitar timeout)
+RUN pip3 install --no-cache-dir --index-url https://pypi.org/simple onnxslim
+
 # Fix TensorRT para numpy >= 1.24 (JetPack 6) - solo si existe
 RUN if [ -f /usr/lib/python3.10/dist-packages/tensorrt/__init__.py ]; then \
         sed -i "s|bool: np.bool,|bool: np.bool_,|g" /usr/lib/python3.10/dist-packages/tensorrt/__init__.py; \
