--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,16 +7,16 @@ processing:
 # Configuración de cámaras
 cameras:
   1:
-    use_rtsp: true  # true = stream RTSP, false = archivo MP4
-    # input_video: "video/video_camara1_0_4__22.mp4"
-    input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
+    use_rtsp: false  # true = stream RTSP, false = archivo MP4
+    input_video: "video/video1.mp4"
+    #input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
     output_video: "video/camera_1_processed.mp4"
     camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517200"
     save_video: true  # true = guarda video procesado, false = solo procesa
     save_data: "data/camera_1"
     # Para videos MP4 (solo si use_rtsp=false)
     start_video: 0
-    end_video: 30
+    end_video: 44
     # Para streams RTSP (solo si use_rtsp=true y save_video=true)
     time_save_rtsp: 120  # segundos de grabación
     polygons:
