--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@
 cameras:
   1:
     use_rtsp: true  # true = stream RTSP, false = archivo MP4
-    # input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
-    input_video: "video/video1.mp4"
+    input_video: "rtsp://admin:Facil.12@192.168.1.3:554/Streaming/Channels/101"
+    #input_video: "video/video1.mp4"
     output_video: "video/camera_1_processed.mp4"
     camera_sn: "DS-2SE3C204MWG-E/1220240711AAWRFH2517200"
     save_video: true  # true = guarda video procesado, false = solo procesa
